--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+opentelemetry-proto==1.26.0
+pyarrow==18.0.0
+multiprocess==0.70.16
+numpy==1.26.4
 datasets==3.2.0
 openai==1.53.0
 vllm==0.8.4
-protobuf==5.26.1
+protobuf==4.25.8
